syntax = "proto3";

package aegis;

option go_package = "github.com/zoobzio/aegis";

service MeshService {
  // Core mesh primitives
  rpc Ping(PingRequest) returns (PingResponse);
  rpc GetHealth(HealthRequest) returns (HealthResponse);
  rpc GetNodeInfo(NodeInfoRequest) returns (NodeInfoResponse);

  // Topology operations
  rpc SyncTopology(TopologySyncRequest) returns (TopologySyncResponse);
  rpc GetTopology(GetTopologyRequest) returns (GetTopologyResponse);
}

message PingRequest {
  string sender_id = 1;
  int64 timestamp = 2;
}

message PingResponse {
  string receiver_id = 1;
  int64 timestamp = 2;
  bool success = 3;
}

message HealthRequest {
  string sender_id = 1;
}

message HealthResponse {
  string node_id = 1;
  string status = 2;
  int64 last_checked = 3;
  string message = 4;
  string error = 5;
}

message NodeInfoRequest {
  string sender_id = 1;
}

message NodeInfoResponse {
  string id = 1;
  string name = 2;
  string type = 3;
  string address = 4;
  HealthResponse health = 5;
}

// Topology messages
message TopologySyncRequest {
  string sender_id = 1;
  int64 version = 2;
}

message TopologySyncResponse {
  int64 version = 1;
  repeated TopologyNode nodes = 2;
  int64 updated_at = 3;
}

message GetTopologyRequest {
  string sender_id = 1;
}

message GetTopologyResponse {
  int64 version = 1;
  repeated TopologyNode nodes = 2;
}

message TopologyNode {
  string id = 1;
  string name = 2;
  string type = 3;
  string address = 4;
  int64 joined_at = 5;
  int64 updated_at = 6;
  repeated Service services = 7;
}

message Service {
  string name = 1;
  string version = 2;
}
